--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,15 +2,33 @@
 
 <ul>
 	<li>
-		<a href="/somar">Somar</a>
+		<a href="/precoFox">Fox</a>
 	</li>
 	<li>
-		<a href="/subtrair">Subtrair</a>
+		<a href="/precoGol">Gol</a>
 	</li>
 	<li>
-		<a href="/multiplicar">Multiplicar</a>
+		<a href="/precoGolf">Golf</a>
 	</li>
 	<li>
-		<a href="/dividir">Dividir</a>
+		<a href="/precoSaveiro">Saveiro</a>
+	</li>
+	<li>
+		<a href="/precoVoyage">Voyage</a>
+	</li>
+	<li>
+		<a href="/precoC3">C3</a>
+	</li>
+	<li>
+		<a href="/precoC4">C4</a>
+	</li>
+	<li>
+		<a href="/precoAircross">Aircross</a>
+	</li>
+	<li>
+		<a href="/precoDS5">DS5</a>
+	</li>
+	<li>
+		<a href="/precoDS3">DS3</a>
 	</li>
 </ul>
