--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,6 @@
 <html>
 	<head>
-		<title>Calculadora</title>
+		<title>Calculadora de Preços de Parcelas para Financiamento</title>
+		<link href="css/app.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
