--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,34 +1,25 @@
-<h2>Jonathan's Project</h2>
+<link href="css/app.css" rel="stylesheet" type="text/css">
+<h2>Projeto PI 2015 (node.js + Express + CircleCI + Heroku + Coveralls + Selenium)</h2>
 
-<ul>
-	<li>
-		<a href="/precoFox">Fox</a>
-	</li>
-	<li>
-		<a href="/precoGol">Gol</a>
-	</li>
-	<li>
-		<a href="/precoGolf">Golf</a>
-	</li>
-	<li>
-		<a href="/precoSaveiro">Saveiro</a>
-	</li>
-	<li>
-		<a href="/precoVoyage">Voyage</a>
-	</li>
-	<li>
-		<a href="/precoC3">C3</a>
-	</li>
-	<li>
-		<a href="/precoC4">C4</a>
-	</li>
-	<li>
-		<a href="/precoAircross">Aircross</a>
-	</li>
-	<li>
-		<a href="/precoDS5">DS5</a>
-	</li>
-	<li>
-		<a href="/precoDS3">DS3</a>
-	</li>
-</ul>
+<div id="menu">
+    <ul>
+        <li><a href="precoFox">Fox</a></li>
+        <li><a href="precoGol">Gol</a></li>
+        <li><a href="precoGolf">Golf</a></li>
+        <li><a href="precoSaveiro">Saveiro</a></li>
+        <li><a href="precoVoyage">Voyage</a></li>
+        <li><a href="precoC3">C3</a></li>
+        <li><a href="precoC4">C4</a></li>
+        <li><a href="precoAircross">AirCross</a></li>
+        <li><a href="precoDS5">DS5</a></li>
+        <li><a href="precoDS3">DS3</a></li>
+        <li><a href="precoHB20">HB20</a></li>
+        <li><a href="precoTucson">Tucson</a></li>
+        <li><a href="precoIX35">IX35</a></li>
+        <li><a href="precoSantaFe">Santa Fé</a></li>
+        <li><a href="precoAzera">Azera</a></li>
+        <li><a href="precoFrontier">Frontier</a></li>
+        <li><a href="precoSentra">Sentra</a></li>
+        <li><a href="precoVersa">Versa</a></li>
+    </ul>
+</div>
