--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,23 +3,25 @@
 
 <div id="menu">
     <ul>
-        <li><a href="precoFox">Fox</a></li>
-        <li><a href="precoGol">Gol</a></li>
-        <li><a href="precoGolf">Golf</a></li>
-        <li><a href="precoSaveiro">Saveiro</a></li>
-        <li><a href="precoVoyage">Voyage</a></li>
+        <li><a href="precoAircross">AirCross</a></li>
+        <li><a href="precoAzera">Azera</a></li>
         <li><a href="precoC3">C3</a></li>
         <li><a href="precoC4">C4</a></li>
-        <li><a href="precoAircross">AirCross</a></li>
-        <li><a href="precoDS5">DS5</a></li>
         <li><a href="precoDS3">DS3</a></li>
-        <li><a href="precoHB20">HB20</a></li>
-        <li><a href="precoTucson">Tucson</a></li>
-        <li><a href="precoIX35">IX35</a></li>
-        <li><a href="precoSantaFe">Santa Fé</a></li>
-        <li><a href="precoAzera">Azera</a></li>
+        <li><a href="precoDS5">DS5</a></li>
+        <li><a href="precoFerrari">Ferrari</a></li>
+        <li><a href="precoFox">Fox</a></li>
         <li><a href="precoFrontier">Frontier</a></li>
+        <li><a href="precoGol">Gol</a></li>
+        <li><a href="precoGolf">Golf</a></li>
+        <li><a href="precoHB20">HB20</a></li>
+        <li><a href="precoIX35">IX35</a></li>
+        <li><a href="precoLamborghini">Lamborghini</a></li>
+        <li><a href="precoSantaFe">Santa Fé</a></li>
+        <li><a href="precoSaveiro">Saveiro</a></li>
         <li><a href="precoSentra">Sentra</a></li>
+        <li><a href="precoTucson">Tucson</a></li>
         <li><a href="precoVersa">Versa</a></li>
+        <li><a href="precoVoyage">Voyage</a></li>
     </ul>
 </div>
