--- a/views/precoAircross.ejs
+++ b/views/precoAircross.ejs
@@ -1,4 +1,4 @@
-<h2>Parcelas do Aircross 2015</h2>
+<h2>Parcelas - Aircross 2015</h2>
 
 <% var operacao = 'precoAircross'; %>
 <% include formulario %>
