--- a/views/precoSantaFe.ejs
+++ b/views/precoSantaFe.ejs
@@ -1,4 +1,4 @@
-<h2>Parcelas do Santa Fé 2015</h2>
+<h2>Parcelas - Santa Fé 2015</h2>
 
 <% var operacao = 'precoSantaFe'; %>
 <% include formulario %>
