--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,6 +3,17 @@ body {
     margin:4px;
 }
 
+h2 {
+    color:#232323;
+    font-style:normal;
+    font-weight:500;
+    letter-spacing:-1px;
+    line-height:1.1em;
+    margin:30px 0;
+    text-align:center;
+    font-size:42px;
+}
+
 #menu ul {
     padding:0px;
     margin:0px;
