--- a/views/precoFrontier.ejs
+++ b/views/precoFrontier.ejs
@@ -1,4 +1,4 @@
-<h2>Parcelas do Frontier 2016</h2>
+<h2>Parcelas - Frontier 2016</h2>
 
 <% var operacao = 'precoFrontier'; %>
 <% include formulario %>
