erro no istanbul corrigido

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <link href="css/app.css" rel="stylesheet" type="text/css">
-<h2>Projeto PI 2015 (node.js + Express + CircleCI + Heroku + !Coveralls + !Protractor)</h2>
+<h2>Projeto PI 2015 (node.js + Express + CircleCI + Heroku + Istanbul + !Protractor)</h2>
 
 <div id="menu">
     <ul>
