protractor funcionando (protractor conf.js)

--- a/views/formulario.ejs
+++ b/views/formulario.ejs
@@ -10,7 +10,7 @@
 </form>
 
 <% if(typeof(resultado) != 'undefined') { %>
-	<p>Valor de cada parcela: R$ <%= resultado %>.</p>
+	<p id = "result">Valor de cada parcela: R$ <%= resultado %>.</p>
 <% } %>
 
-<center><a href="/">Voltar</a></center>
+<a href="/">Voltar</a>
